--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,17 +34,11 @@
 }
 
 input {
+  display: flex;
   width: 360px;
   height: 40px;
-  flex-shrink: 0;
-  color: #2E2F42;
-
-  font-family: Montserrat;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.64px;
+  justify-content: center;
+  align-items: center;
 }
 
 textarea {
@@ -54,4 +48,14 @@ textarea {
   justify-content: center;
   align-items: center;
   resize: none;
+}
+
+button {
+  border-radius: 8px;
+  background: #4E75FF;
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
