--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -60,3 +60,44 @@ button {
   align-items: center;
   gap: 10px;
 }
+
+.image {
+  width: 360px;
+  height: 200px;
+  flex-shrink: 0;
+}
+
+.forminp {
+  display: flex;
+  align-items: center;
+}
+
+.feedback-form {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  margin-right: 10px;
+}
+
+.label {
+  margin-right: 10px;
+}
+
+.btn {
+  color: #FFF;
+
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.64px;
+
+}
